--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,15 @@ altair==5.2.0
 annotated-types==0.6.0
 anyio==3.7.1
 asgiref==3.7.2
+async-timeout==4.0.3
 attrs==23.1.0
 audio-recorder-streamlit==0.0.8
 backoff==2.2.1
 bcrypt==4.1.1
+beautifulsoup4==4.12.2
 blinker==1.7.0
+Brotli==1.1.0
+bs4==0.0.1
 cachetools==5.3.2
 certifi==2023.11.17
 cffi==1.16.0
@@ -20,6 +24,7 @@ coloredlogs==15.0.1
 dataclasses-json==0.6.3
 Deprecated==1.2.14
 distro==1.8.0
+exceptiongroup==1.2.0
 fastapi==0.104.1
 filelock==3.13.1
 flatbuffers==23.5.26
@@ -59,6 +64,7 @@ monotonic==1.6
 more-itertools==10.1.0
 mpmath==1.3.0
 multidict==6.0.4
+mutagen==1.47.0
 mypy-extensions==1.0.0
 networkx==3.2.1
 numba==0.58.1
@@ -88,10 +94,13 @@ pyarrow==14.0.1
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
+pycryptodomex==3.19.0
 pydantic==2.5.2
 pydantic_core==2.14.5
 pydeck==0.8.1b0
+pydub==0.25.1
 Pygments==2.17.2
+pypdf==3.17.1
 PyPika==0.48.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -108,6 +117,7 @@ six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
 soundfile==0.12.1
+soupsieve==2.5
 SpeechRecognition==3.10.0
 SQLAlchemy==2.0.23
 starlette==0.27.0
@@ -136,5 +146,6 @@ websocket-client==1.7.0
 websockets==12.0
 wrapt==1.16.0
 yarl==1.9.3
+yt-dlp==2023.11.16
 zipp==3.17.0
-pysqlite3-binary
+pysqlite3-binary # Please comment out this line if you install the requirements.txt locally, this is for streamlit deployment
